[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sods"
version = "2.4.0"
description = "Sandbox Observer-Driven Specializer (SODS) — A Proof-of-Concept Python Runtime Specialization Framework"
readme = "README.md"
authors = [
    { name = "Fajar Kurnia", email = "fajarkurnia@arena.ai" }
]
license = { text = "MIT or Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0"]

[project.scripts]
sods = "sods.cli:main"

[project.urls]
Homepage = "https://github.com/fajarkurnia0388/sods-runtime"
Documentation = "https://fajarkurnia0388.github.io/sods-runtime/"
Repository = "https://github.com/fajarkurnia0388/sods-runtime"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
